--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "sail-riscv"]
 	path = sail-riscv
-	url = https://github.com/CHERIoT-platform/sail-riscv.git
-	branch = cheriot-submodule
+	url = https://github.com/lowRISC/sail-riscv.git
+	branch = ibex
